feature(apiDTO-Appid) : APIdto include applicationId (#64)
* feature(apiDTO-Appid) : APIdto includes applicationId

* fix(tests) : Updated Mapper tests
